<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RestClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_get_code">Get Authenitication Code</string>
    <string name="action_delete">Remove</string>
    <string name="action_update">update</string>

</resources>
