<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.patronage.rest.RestClient.MainActivity" >
    
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_get_code"
        android:title="@string/action_get_code"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_update"
        android:title="@string/action_update"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
